# MCPClientPOC

./: .gitignore  pyproject.toml  requirements.txt
api/: main.py  main2.py
